--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/newTaskName"
         android:layout_width="238dp"
         android:layout_height="36dp"
         android:text="Name"
@@ -32,7 +32,7 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/newTaskDate"
         android:layout_width="238dp"
         android:layout_height="32dp"
         android:text="Date"
